site: homepage links

--- a/site/src/homepage/homepage_content.html
+++ b/site/src/homepage/homepage_content.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column align-items-center text-center homepage-content">
   <div class="section section--homepage-demo demo d-flex flex-column align-items-center">
     <h1>International<br><span class="keep-together">Telephone Input</span></h1>
-    <p class="subtitle">A JavaScript plugin for entering, formatting and validating international telephone numbers. Includes TypeScript definitions, plus React, Vue, Angular and Svelte components.</p>
+    <p class="subtitle">A JavaScript plugin for entering, formatting and validating international telephone numbers. Includes TypeScript definitions, plus <a href="https://github.com/jackocnr/intl-tel-input/blob/master/react/README.md">React</a>, <a href="https://github.com/jackocnr/intl-tel-input/blob/master/vue/README.md">Vue</a>, <a href="https://github.com/jackocnr/intl-tel-input/blob/master/angular/README.md">Angular</a> and <a href="https://github.com/jackocnr/intl-tel-input/blob/master/svelte/README.md">Svelte</a> components.</p>
     <div>
       <input type="tel" id="phone" />
       <div class="iti-live-results">Type a number above to see the output here</div>
