--- a/site/src/homepage/homepage_content.html
+++ b/site/src/homepage/homepage_content.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column align-items-center text-center homepage-content">
   <div class="section section--homepage-demo demo d-flex flex-column align-items-center">
     <h1>International<br><span class="keep-together">Telephone Input</span></h1>
-    <p class="subtitle">A JavaScript plugin for entering, formatting and validating international telephone numbers. Includes TypeScript definitions, plus <a href="https://github.com/jackocnr/intl-tel-input/blob/master/react/README.md">React</a>, <a href="https://github.com/jackocnr/intl-tel-input/blob/master/vue/README.md">Vue</a>, <a href="https://github.com/jackocnr/intl-tel-input/blob/master/angular/README.md">Angular</a> and <a href="https://github.com/jackocnr/intl-tel-input/blob/master/svelte/README.md">Svelte</a> components.</p>
+    <p class="subtitle text-muted">A JavaScript plugin for entering, formatting and validating international telephone numbers. Includes TypeScript definitions, plus <a href="https://github.com/jackocnr/intl-tel-input/blob/master/react/README.md">React</a>, <a href="https://github.com/jackocnr/intl-tel-input/blob/master/vue/README.md">Vue</a>, <a href="https://github.com/jackocnr/intl-tel-input/blob/master/angular/README.md">Angular</a> and <a href="https://github.com/jackocnr/intl-tel-input/blob/master/svelte/README.md">Svelte</a> components.</p>
     <div>
       <input type="tel" id="phone" />
       <div class="iti-live-results">Type a number above to see the output here</div>
@@ -134,6 +134,7 @@
                 <h3 class="h5 mb-2">Customisable</h3>
                 <ul class="mb-0">
                   <li>Override CSS variables (e.g. dark mode)</li>
+                  <li>Optionally display the dial code next to the number</li>
                   <li>Extensive options, methods, and events</li>
                 </ul>
               </div>
@@ -144,17 +145,19 @@
     </div>
   </div>
 
-  <div class="section section--playground">
+  <div class="section section--playground-presets">
     <h2>Playground presets</h2>
     <p class="text-muted mb-3">
       Jump straight into the <a href="/playground">Playground</a> with some common configurations.
     </p>
 
-    <div class="d-flex flex-wrap justify-content-center gap-2">
+    <div class="d-flex flex-wrap justify-content-center gap-2 playground-presets">
       <a class="btn btn-outline-primary btn-sm" href="/playground?initialCountry=auto&geoIpLookup=true&loadUtils=true">Auto country lookup</a>
       <a class="btn btn-outline-primary btn-sm" href="/playground?strictMode=true&initialCountry=us&loadUtils=true">Strict numeric mode</a>
+      <a class="btn btn-outline-primary btn-sm" href="/playground?separateDialCode=true&initialCountry=gb">Separate dial code</a>
+      <a class="btn btn-outline-primary btn-sm" href="/playground?allowDropdown=false&initialCountry=us">No dropdown</a>
       <a class="btn btn-outline-primary btn-sm" href="/playground?onlyCountries=%5B%22al%22%2C%22ad%22%2C%22at%22%2C%22by%22%2C%22be%22%2C%22ba%22%2C%22bg%22%2C%22hr%22%2C%22cz%22%2C%22dk%22%2C%22ee%22%2C%22fo%22%2C%22fi%22%2C%22fr%22%2C%22de%22%2C%22gi%22%2C%22gr%22%2C%22va%22%2C%22hu%22%2C%22is%22%2C%22ie%22%2C%22it%22%2C%22lv%22%2C%22li%22%2C%22lt%22%2C%22lu%22%2C%22mk%22%2C%22mt%22%2C%22md%22%2C%22mc%22%2C%22me%22%2C%22nl%22%2C%22no%22%2C%22pl%22%2C%22pt%22%2C%22ro%22%2C%22ru%22%2C%22sm%22%2C%22rs%22%2C%22sk%22%2C%22si%22%2C%22es%22%2C%22se%22%2C%22ch%22%2C%22ua%22%2C%22gb%22%5D&initialCountry=gb">Only European countries</a>
-      <a class="btn btn-outline-primary btn-sm" href="/playground?countryNameLocale=vi&i18n=vi&initialCountry=vn">Vietnamese UI</a>
+      <a class="btn btn-outline-primary btn-sm" href="/playground?countryNameLocale=zh&i18n=zh&initialCountry=cn">Chinese UI</a>
     </div>
 
     <p class="text-muted mt-3 mb-0">
