site: cookie banner tweak

--- a/site/src/shared/analytics.html
+++ b/site/src/shared/analytics.html
@@ -33,17 +33,17 @@ silktideCookieBannerManager.updateCookieBannerConfig({
       description: "<p>These cookies help us improve the site by tracking which pages are most popular and how visitors move around the site.</p>",
       defaultValue: true,
       onAccept: function() {
-        gtag('consent', 'update', {
-          analytics_storage: 'granted',
-        });
+        // gtag('consent', 'update', {
+        //   analytics_storage: 'granted',
+        // });
         dataLayer.push({
           'event': 'consent_accepted_analytics',
         });
       },
       onReject: function() {
-        gtag('consent', 'update', {
-          analytics_storage: 'denied',
-        });
+        // gtag('consent', 'update', {
+        //   analytics_storage: 'denied',
+        // });
       }
     },
     {
@@ -51,21 +51,21 @@ silktideCookieBannerManager.updateCookieBannerConfig({
       name: "Advertising",
       description: "<p>These cookies provide extra features and personalization to improve your experience. They may be set by us or by partners whose services we use.</p>",
       onAccept: function() {
-        gtag('consent', 'update', {
-          ad_storage: 'granted',
-          ad_user_data: 'granted',
-          ad_personalization: 'granted',
-        });
+        // gtag('consent', 'update', {
+        //   ad_storage: 'granted',
+        //   ad_user_data: 'granted',
+        //   ad_personalization: 'granted',
+        // });
         dataLayer.push({
           'event': 'consent_accepted_advertising',
         });
       },
       onReject: function() {
-        gtag('consent', 'update', {
-          ad_storage: 'denied',
-          ad_user_data: 'denied',
-          ad_personalization: 'denied',
-        });
+        // gtag('consent', 'update', {
+        //   ad_storage: 'denied',
+        //   ad_user_data: 'denied',
+        //   ad_personalization: 'denied',
+        // });
       }
     }
   ],
