--- a/site/src/shared/analytics.html
+++ b/site/src/shared/analytics.html
@@ -1,16 +1,12 @@
 <!-- SilkTide (cookie consent notice) pre-GTM code -->
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
+  function gtag() {dataLayer.push(arguments);}
   gtag('consent', 'default', {
     analytics_storage: localStorage.getItem('silktideCookieChoice_analytics') === 'true' ? 'granted' : 'denied',
     ad_storage: localStorage.getItem('silktideCookieChoice_marketing') === 'true' ? 'granted' : 'denied',
     ad_user_data: localStorage.getItem('silktideCookieChoice_marketing') === 'true' ? 'granted' : 'denied',
     ad_personalization: localStorage.getItem('silktideCookieChoice_marketing') === 'true' ? 'granted' : 'denied',
-    functionality_storage: localStorage.getItem('silktideCookieChoice_necessary') === 'true' ? 'granted' : 'denied',
-    security_storage: localStorage.getItem('silktideCookieChoice_necessary') === 'true' ? 'granted' : 'denied'
   });
 </script>
 
@@ -50,9 +46,6 @@ silktideCookieBannerManager.updateCookieBannerConfig({
         gtag('consent', 'update', {
           analytics_storage: 'granted',
         });
-        // dataLayer.push({
-        //   'event': 'consent_accepted_analytics',
-        // });
       },
       onReject: function() {
         gtag('consent', 'update', {
@@ -70,9 +63,6 @@ silktideCookieBannerManager.updateCookieBannerConfig({
           ad_user_data: 'granted',
           ad_personalization: 'granted',
         });
-        // dataLayer.push({
-        //   'event': 'consent_accepted_advertising',
-        // });
       },
       onReject: function() {
         gtag('consent', 'update', {
