site: implement custom cookie-prefs icon in menu

--- a/site/src/shared/analytics.html
+++ b/site/src/shared/analytics.html
@@ -19,10 +19,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <!-- SilkTide Cookie Consent Notice -->
-<link rel="stylesheet" id="silktide-consent-manager-css" href="/cookie-banner/silktide-consent-manager.css">
-<script src="/cookie-banner/silktide-consent-manager.js"></script>
+<link rel="stylesheet" id="silktide-consent-manager-css" href="/css/silktide-consent-manager.css">
+<script src="/js/silktide-consent-manager.js"></script>
 <script>
-silktideCookieBannerManager.updateCookieBannerConfig({
+window.silktideCookieBannerManager.updateCookieBannerConfig({
   background: {
     showBackground: true
   },
