--- a/site/src/shared/bootstrap_script.html
+++ b/site/src/shared/bootstrap_script.html
@@ -3,3 +3,12 @@
   integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
   crossorigin="anonymous"
 ></script>
+
+<script>
+  function showCookiePreferences() {
+    const manager = window.silktideCookieBannerManager.getInstance();
+    manager.toggleModal(true);
+  }
+  document.querySelector('.cookie-prefs-header').addEventListener('click', () => showCookiePreferences());
+  document.querySelector('.cookie-prefs-sidebar').addEventListener('click', () => showCookiePreferences());
+</script>
