site: cookie banner improvements

--- a/site/src/shared/bootstrap_script.html
+++ b/site/src/shared/bootstrap_script.html
@@ -4,6 +4,7 @@
   crossorigin="anonymous"
 ></script>
 
+<!-- Cookie Preferences -->
 <script>
   function showCookiePreferences() {
     const manager = window.silktideCookieBannerManager.getInstance();
