--- a/site/src/shared/analytics.html
+++ b/site/src/shared/analytics.html
@@ -35,7 +35,6 @@ window.silktideCookieBannerManager.updateCookieBannerConfig({
       name: "Necessary",
       description: "<p>These cookies are necessary for the website to function properly and cannot be switched off. They help with things like setting your privacy preferences.</p>",
       required: true,
-      onAccept: function() {}
     },
     {
       id: "analytics",
@@ -46,11 +45,13 @@ window.silktideCookieBannerManager.updateCookieBannerConfig({
         gtag('consent', 'update', {
           analytics_storage: 'granted',
         });
+        window.posthog.opt_in_capturing();
       },
       onReject: function() {
         gtag('consent', 'update', {
           analytics_storage: 'denied',
         });
+        window.posthog.opt_out_capturing();
       }
     },
     {
@@ -93,11 +94,12 @@ window.silktideCookieBannerManager.updateCookieBannerConfig({
 });
 </script>
 
-<!-- PostHog error reporting -->
+<!-- PostHog tracking / error reporting -->
 <script>
     !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.async=!0,p.src=s.api_host.replace(".i.posthog.com","-assets.i.posthog.com")+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="init capture register register_once register_for_session unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group identify setPersonProperties setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags resetGroups onFeatureFlags addFeatureFlagsHandler onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey getNextSurveyStep".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
     posthog.init('phc_ousZGP4WHTH1bs6BrGhZEyj91cUq1cK8bEBSyxTWNsa', {
         api_host: 'https://eu.i.posthog.com',
-        defaults: '2026-01-30'
-    })
+        defaults: '2026-01-30',
+        cookieless_mode: 'on_reject', // only start tracking if/when user consents
+    });
 </script>
