site: adsense snippet

--- a/site/src/shared/analytics.html
+++ b/site/src/shared/analytics.html
@@ -103,3 +103,6 @@ window.silktideCookieBannerManager.updateCookieBannerConfig({
         cookieless_mode: 'on_reject', // only start tracking if/when user consents
     });
 </script>
+
+<!-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1090343328224651" crossorigin="anonymous"></script>
