site: disable SilkTide cookie notice

--- a/site/src/shared/analytics.html
+++ b/site/src/shared/analytics.html
@@ -1,5 +1,5 @@
 <!-- SilkTide (cookie consent notice) pre-GTM code -->
-<script>
+<!-- <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() {dataLayer.push(arguments);}
   gtag('consent', 'default', {
@@ -8,7 +8,7 @@
     ad_user_data: localStorage.getItem('silktideCookieChoice_marketing') === 'true' ? 'granted' : 'denied',
     ad_personalization: localStorage.getItem('silktideCookieChoice_marketing') === 'true' ? 'granted' : 'denied',
   });
-</script>
+</script> -->
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -19,7 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <!-- SilkTide Cookie Consent Notice -->
-<link rel="stylesheet" id="silktide-consent-manager-css" href="/css/silktide-consent-manager.css">
+<!-- <link rel="stylesheet" id="silktide-consent-manager-css" href="/css/silktide-consent-manager.css">
 <script src="/js/silktide-consent-manager.js"></script>
 <script>
 window.silktideCookieBannerManager.updateCookieBannerConfig({
@@ -92,7 +92,7 @@ window.silktideCookieBannerManager.updateCookieBannerConfig({
     }
   }
 });
-</script>
+</script> -->
 
 <!-- PostHog tracking / error reporting -->
 <script>
