site: fix JS error - comment out unused listeners

--- a/site/src/shared/bootstrap_script.html
+++ b/site/src/shared/bootstrap_script.html
@@ -4,12 +4,12 @@
   crossorigin="anonymous"
 ></script>
 
-<!-- Cookie Preferences -->
-<script>
+<!-- SilkTide cookie preferences buttons -->
+<!-- <script>
   function showCookiePreferences() {
     const manager = window.silktideCookieBannerManager.getInstance();
     manager.toggleModal(true);
   }
   document.querySelector('.cookie-prefs-header').addEventListener('click', () => showCookiePreferences());
   document.querySelector('.cookie-prefs-sidebar').addEventListener('click', () => showCookiePreferences());
-</script>
+</script> -->
