--- a/site/src/shared/common_head_end.html
+++ b/site/src/shared/common_head_end.html
@@ -1,7 +1,7 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() {dataLayer.push(arguments);}
-  // set the "default" consent state to deny everything, which is then updated later (or immediately if the user has already consented)
+  // GTM consent requirement: set the "default" consent state to deny everything, which is then updated later (or immediately if the user has already consented)
   gtag('consent', 'default', {
     analytics_storage: 'denied',
     ad_storage: 'denied',
@@ -95,15 +95,17 @@ window.silktideCookieBannerManager.updateCookieBannerConfig({
 });
 </script> -->
 
-<!-- PostHog tracking / error reporting -->
-<!-- <script>
+<!-- PostHog error reporting / replays -->
+<script>
     !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.async=!0,p.src=s.api_host.replace(".i.posthog.com","-assets.i.posthog.com")+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="init capture register register_once register_for_session unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group identify setPersonProperties setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags resetGroups onFeatureFlags addFeatureFlagsHandler onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey getNextSurveyStep".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
     posthog.init('phc_ousZGP4WHTH1bs6BrGhZEyj91cUq1cK8bEBSyxTWNsa', {
         api_host: 'https://eu.i.posthog.com',
         defaults: '2026-01-30',
-        cookieless_mode: 'on_reject', // only start tracking if/when user consents
+        cookieless_mode: 'always', // no need for cookies - we're only interested in JS error reporting / replays on individual pages
+        autocapture: false, // this is separate to replays, and only needed for analytics
+        enable_recording_console_logs: true, // useful for debugging error reports
     });
-</script> -->
+</script>
 
 <!-- Google AdSense -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1090343328224651" crossorigin="anonymous"></script>
