site: fix canonical paths - remove html file extension

--- a/site/static/examples/index.html
+++ b/site/static/examples/index.html
@@ -5,18 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Redirecting…</title>
 
-		<meta http-equiv="refresh" content="0; url=/examples/validation-practical.html" />
-		<link rel="canonical" href="https://intl-tel-input.com/examples/validation-practical.html" />
+		<meta http-equiv="refresh" content="0; url=/examples/validation-practical" />
+		<link rel="canonical" href="https://intl-tel-input.com/examples/validation-practical" />
 
 		<script>
 			// Use replace so /examples doesn't stay in history.
-			window.location.replace("/examples/validation-practical.html");
+			window.location.replace("/examples/validation-practical");
 		</script>
 	</head>
 	<body>
 		<p>
 			Redirecting to
-			<a href="/examples/validation-practical.html">/examples/validation-practical.html</a>…
+			<a href="/examples/validation-practical">/examples/validation-practical</a>…
 		</p>
 	</body>
 </html>
