--- a/site/static/examples/localise-countries.html
+++ b/site/static/examples/localise-countries.html
@@ -5,18 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Redirecting…</title>
 
-		<meta http-equiv="refresh" content="0; url=/examples/internationalisation.html" />
-		<link rel="canonical" href="https://intl-tel-input.com/examples/internationalisation.html" />
+		<meta http-equiv="refresh" content="0; url=/examples/internationalisation" />
+		<link rel="canonical" href="https://intl-tel-input.com/examples/internationalisation" />
 
 		<script>
-			// Use replace so /examples/localise-countries.html doesn't stay in history.
-			window.location.replace("/examples/internationalisation.html");
+			// Use replace so /examples/localise-countries doesn't stay in history.
+			window.location.replace("/examples/internationalisation");
 		</script>
 	</head>
 	<body>
 		<p>
 			Redirecting to
-			<a href="/examples/internationalisation.html">/examples/internationalisation.html</a>…
+			<a href="/examples/internationalisation">/examples/internationalisation</a>…
 		</p>
 	</body>
 </html>
