--- a/site/static/examples/validation.html
+++ b/site/static/examples/validation.html
@@ -5,18 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Redirecting…</title>
 
-		<meta http-equiv="refresh" content="0; url=/examples/validation-precise.html" />
-		<link rel="canonical" href="https://intl-tel-input.com/examples/validation-precise.html" />
+		<meta http-equiv="refresh" content="0; url=/examples/validation-precise" />
+		<link rel="canonical" href="https://intl-tel-input.com/examples/validation-precise" />
 
 		<script>
-			// Use replace so /examples/validation.html doesn't stay in history.
-			window.location.replace("/examples/validation-precise.html");
+			// Use replace so /examples/validation doesn't stay in history.
+			window.location.replace("/examples/validation-precise");
 		</script>
 	</head>
 	<body>
 		<p>
 			Redirecting to
-			<a href="/examples/validation-precise.html">/examples/validation-precise.html</a>…
+			<a href="/examples/validation-precise">/examples/validation-precise</a>…
 		</p>
 	</body>
 </html>
