playground: Supported ISO2 country codes modal

--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -112,4 +112,34 @@
     </div>
     </div>
   </div>
+
+  <div
+    class="modal fade"
+    id="itiPlaygroundIso2Modal"
+    tabindex="-1"
+    aria-labelledby="itiPlaygroundIso2ModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title h5" id="itiPlaygroundIso2ModalLabel">Supported ISO2 country codes</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="table-responsive">
+            <table class="table table-sm mb-0">
+              <thead>
+                <tr>
+                  <th scope="col">Country</th>
+                  <th scope="col">ISO2</th>
+                </tr>
+              </thead>
+              <tbody id="itiPlaygroundIso2ModalTableBody"></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
