homepage: make icons and bottom links use same colour as links

--- a/site/src/homepage/homepage_content.html
+++ b/site/src/homepage/homepage_content.html
@@ -44,7 +44,7 @@
         <div class="card bg-transparent h-100">
           <div class="card-body">
             <div class="d-flex align-items-start gap-3">
-              <i class="bi bi-search text-primary fs-5 lh-1 flex-shrink-0" aria-hidden="true"></i>
+              <i class="bi bi-search fs-5 lh-1 flex-shrink-0 link-icon" aria-hidden="true"></i>
               <div>
                 <h3 class="h5 mb-2">Fast country picking</h3>
                 <ul class="mb-0">
@@ -61,7 +61,7 @@
         <div class="card bg-transparent h-100">
           <div class="card-body">
             <div class="d-flex align-items-start gap-3">
-              <i class="bi bi-stars text-primary fs-5 lh-1 flex-shrink-0" aria-hidden="true"></i>
+              <i class="bi bi-stars fs-5 lh-1 flex-shrink-0 link-icon" aria-hidden="true"></i>
               <div>
                 <h3 class="h5 mb-2">Smart defaults</h3>
                 <ul class="mb-0">
@@ -78,7 +78,7 @@
         <div class="card bg-transparent h-100">
           <div class="card-body">
             <div class="d-flex align-items-start gap-3">
-              <i class="bi bi-telephone text-primary fs-5 lh-1 flex-shrink-0" aria-hidden="true"></i>
+              <i class="bi bi-telephone fs-5 lh-1 flex-shrink-0 link-icon" aria-hidden="true"></i>
               <div>
                 <h3 class="h5 mb-2">Formatting & output</h3>
                 <ul class="mb-0">
@@ -95,7 +95,7 @@
         <div class="card bg-transparent h-100">
           <div class="card-body">
             <div class="d-flex align-items-start gap-3">
-              <i class="bi bi-shield-check text-primary fs-5 lh-1 flex-shrink-0" aria-hidden="true"></i>
+              <i class="bi bi-shield-check fs-5 lh-1 flex-shrink-0 link-icon" aria-hidden="true"></i>
               <div>
                 <h3 class="h5 mb-2">Validation</h3>
                 <ul class="mb-0">
@@ -112,7 +112,7 @@
         <div class="card bg-transparent h-100">
           <div class="card-body">
             <div class="d-flex align-items-start gap-3">
-              <i class="bi bi-globe text-primary fs-5 lh-1 flex-shrink-0" aria-hidden="true"></i>
+              <i class="bi bi-globe fs-5 lh-1 flex-shrink-0 link-icon" aria-hidden="true"></i>
               <div>
                 <h3 class="h5 mb-2">International &amp; accessible</h3>
                 <ul class="mb-0">
@@ -129,7 +129,7 @@
         <div class="card bg-transparent h-100">
           <div class="card-body">
             <div class="d-flex align-items-start gap-3">
-              <i class="bi bi-sliders text-primary fs-5 lh-1 flex-shrink-0" aria-hidden="true"></i>
+              <i class="bi bi-sliders fs-5 lh-1 flex-shrink-0 link-icon" aria-hidden="true"></i>
               <div>
                 <h3 class="h5 mb-2">Customisable</h3>
                 <ul class="mb-0">
