site: component docs

--- a/site/src/shared/common_body_end.html
+++ b/site/src/shared/common_body_end.html
@@ -13,3 +13,6 @@
   document.querySelector('.cookie-prefs-header').addEventListener('click', () => showCookiePreferences());
   document.querySelector('.cookie-prefs-sidebar').addEventListener('click', () => showCookiePreferences());
 </script> -->
+
+<script src="<%= cacheBust('/js/highlight.min.js') %>"></script>
+<script>hljs.highlightAll();</script>
