site: use bootstrap styling for plugin input/button examples

--- a/site/src/examples/html/hidden_input.html
+++ b/site/src/examples/html/hidden_input.html
@@ -1,6 +1,10 @@
 <p id="message"></p>
 
-<form id="form">
-  <input id="phone" type="tel" name="phone" />
-  <button class="button" type="submit">Submit</button>
+<form id="form" class="row g-2">
+  <div class="col-auto">
+    <input id="phone" type="tel" name="phone" class="form-control" />
+  </div>
+  <div class="col-auto">
+    <button class="btn btn-primary" type="submit">Submit</button>
+  </div>
 </form>
