--- a/site/src/examples/html/multiple_instances.html
+++ b/site/src/examples/html/multiple_instances.html
@@ -1,14 +1,14 @@
 <table>
   <tr>
     <td>Home:</td>
-    <td><input id="home" type="tel" /></td>
+    <td><input id="home" type="tel" class="form-control" /></td>
   </tr>
   <tr>
     <td>Mobile:</td>
-    <td><input id="mobile" type="tel" /></td>
+    <td><input id="mobile" type="tel" class="form-control" /></td>
   </tr>
   <tr>
     <td>Vacation:</td>
-    <td><input id="vacation" type="tel" /></td>
+    <td><input id="vacation" type="tel" class="form-control" /></td>
   </tr>
 </table>
