--- a/site/src/examples/html/validation.html
+++ b/site/src/examples/html/validation.html
@@ -1,4 +1,10 @@
-<input id="phone" type="tel">
-<button class="button" id="btn" type="button">Validate</button>
+<div class="row g-2">
+  <div class="col-auto">
+    <input id="phone" type="tel" class="form-control" />
+  </div>
+  <div class="col-auto">
+    <button class="btn btn-primary" id="btn" type="button">Validate</button>
+  </div>
+</div>
 <span id="valid-msg" class="hide">✓ Valid</span>
 <span id="error-msg" class="hide"></span>
