--- a/site/src/homepage/homepage_content.html
+++ b/site/src/homepage/homepage_content.html
@@ -3,7 +3,7 @@
     <h1>International<br><span class="keep-together">Telephone Input</span></h1>
     <p class="subtitle text-muted">A JavaScript plugin for entering, formatting and validating international telephone numbers. Includes TypeScript definitions, plus <a href="/docs/react-component">React</a>, <a href="/docs/vue-component">Vue</a>, <a href="/docs/angular-component">Angular</a> and <a href="/docs/svelte-component">Svelte</a> components.</p>
     <div>
-      <input type="tel" id="phone" />
+      <input type="tel" id="phone" class="form-control" />
       <div class="iti-live-results">Type a number above to see the output here</div>
     </div>
     <a href="/docs" class="btn btn-primary btn-lg d-inline-flex align-items-center">
