--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -100,7 +100,7 @@
               This is reset each time the options are changed. For a persistent number, see the Attributes section.
             </p>
 
-            <input type="tel" id="playgroundPhone" />
+            <input type="tel" id="playgroundPhone" class="form-control" />
             <div class="form-check mt-2 playground-dropdown-checkbox">
               <input class="form-check-input" type="checkbox" id="playgroundKeepDropdownOpen" checked />
               <label class="form-check-label" for="playgroundKeepDropdownOpen">Keep dropdown open</label>
