site: update links

--- a/site/src/examples/copy/svelte_component_desc.html
+++ b/site/src/examples/copy/svelte_component_desc.html
@@ -1,3 +1,3 @@
-<p>This project includes an official Svelte component alongside the original JavaScript plugin. It supports all of the same features, including the country picker, formatting, and validation. View all of the supported props in the <a href="https://github.com/jackocnr/intl-tel-input/blob/master/svelte/README.md">Svelte README</a>.</p>
+<p>This project includes an official Svelte component alongside the original JavaScript plugin. It supports all of the same features, including the country picker, formatting, and validation. View all of the supported props in the <a href="/docs/svelte-component">Svelte component</a> docs.</p>
 
 <p>Below is a live demo and example code demonstrating form integration, validation, and error messaging. For more patterns and use cases, explore the <a href="https://github.com/jackocnr/intl-tel-input/tree/master/svelte/demo">Svelte demos</a>.</p>
