playground: visual fix

--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -35,7 +35,7 @@
       <div class="ms-auto text-end">
         <label for="playgroundPresetsSelect" class="form-label visually-hidden">Playground presets</label>
         <div class="d-flex gap-2">
-          <select id="playgroundPresetsSelect" class="form-select form-select-sm playground-presets-select" aria-label="Playground presets" onchange="if(this.value) window.location.href=this.value">
+          <select id="playgroundPresetsSelect" class="form-select form-select-sm playground-presets-select" aria-label="Playground presets">
             <option value="">Presets</option>
             <option value="/playground?geoIpLookup=true&initialCountry=auto">Auto country lookup</option>
             <option value="/playground?initialCountry=us&strictMode=true">Strict numeric mode</option>
