site: example page improvements

--- a/site/src/examples/html/multiple_instances.html
+++ b/site/src/examples/html/multiple_instances.html
@@ -1,14 +1,20 @@
-<table>
-  <tr>
-    <td>Home:</td>
-    <td><input id="home" type="tel" class="form-control" /></td>
-  </tr>
-  <tr>
-    <td>Mobile:</td>
-    <td><input id="mobile" type="tel" class="form-control" /></td>
-  </tr>
-  <tr>
-    <td>Vacation:</td>
-    <td><input id="vacation" type="tel" class="form-control" /></td>
-  </tr>
-</table>
+<form>
+  <div class="row mb-3 align-items-center">
+    <label for="home" class="col-sm-1 col-form-label">Home</label>
+    <div class="col-sm-10">
+      <input id="home" type="tel" class="form-control" />
+    </div>
+  </div>
+  <div class="row mb-3 align-items-center">
+    <label for="mobile" class="col-sm-1 col-form-label">Mobile</label>
+    <div class="col-sm-10">
+      <input id="mobile" type="tel" class="form-control" />
+    </div>
+  </div>
+  <div class="row mb-3 align-items-center">
+    <label for="vacation" class="col-sm-1 col-form-label">Vacation</label>
+    <div class="col-sm-10">
+      <input id="vacation" type="tel" class="form-control" />
+    </div>
+  </div>
+</form>
