--- a/site/src/examples/html/validation.html
+++ b/site/src/examples/html/validation.html
@@ -1,6 +1,6 @@
 <div class="row g-2">
   <div class="col-auto">
-    <input id="phone" type="tel" class="form-control" />
+    <input id="phone" type="tel" class="form-control" title="Enter phone number" />
   </div>
   <div class="col-auto">
     <button class="btn btn-primary" id="btn" type="button">Validate</button>
