--- a/site/src/examples/html/display_number.html
+++ b/site/src/examples/html/display_number.html
@@ -1,1 +1,1 @@
-<input id="phone" type="tel" class="form-control" value="+447733312345" title="Enter phone number">
+<input id="phone" type="tel" class="form-control" value="+447733312345" title="Enter your phone number">
