--- a/site/src/examples/html/hidden_input.html
+++ b/site/src/examples/html/hidden_input.html
@@ -2,7 +2,7 @@
 
 <form id="form" class="row g-2">
   <div class="col-auto">
-    <input id="phone" type="tel" name="phone" class="form-control" title="Enter phone number" />
+    <input id="phone" type="tel" name="phone" class="form-control" title="Enter your phone number" />
   </div>
   <div class="col-auto">
     <button class="btn btn-primary" type="submit">Submit</button>
