--- a/site/src/examples/html/simple_input.html
+++ b/site/src/examples/html/simple_input.html
@@ -1,1 +1,1 @@
-<input id="phone" type="tel" class="form-control" title="Enter phone number" />
+<input id="phone" type="tel" class="form-control" title="Enter your phone number" />
